Completed phone app

--- a/.gitignore
+++ b/.gitignore
@@ -2311,3 +2311,33 @@ Notes/Notes/obj/Notes.csproj.nuget.dgspec.json
 Notes/Notes/obj/Notes.csproj.nuget.g.props
 Notes/Notes/obj/Notes.csproj.nuget.g.targets
 Notes/Notes/obj/project.assets.json
+Notes/Notes.iOS/obj/iPhone/Debug/Notes.iOS.csprojAssemblyReference.cache
+Notes/Notes.iOS/obj/iPhone/Debug/Notes.iOS.exe
+Notes/Notes.iOS/obj/iPhone/Debug/Notes.iOS.pdb
+Notes/Notes.UWP/obj/x86/Debug/App.xbf
+Notes/Notes.UWP/obj/x86/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+Notes/Notes.UWP/obj/x86/Debug/intermediatexaml/Notes.UWP.exe
+Notes/Notes.UWP/obj/x86/Debug/intermediatexaml/Notes.UWP.pdb
+Notes/Notes.UWP/obj/x86/Debug/MainPage.xbf
+Notes/Notes.UWP/obj/x86/Debug/Microsoft.UI.Xaml/DensityStyles/Compact.xbf
+Notes/Notes.UWP/obj/x86/Debug/Notes.UWP.csprojAssemblyReference.cache
+Notes/Notes.UWP/obj/x86/Debug/Notes.UWP.exe
+Notes/Notes.UWP/obj/x86/Debug/Notes.UWP.pdb
+Notes/Notes.UWP/obj/x86/Debug/ResourceHandlingTask.state
+Notes/Notes.UWP/obj/x86/Debug/XamlSaveStateFile.xml
+Notes/Notes.iOS/obj/iPhone/Debug/Notes.iOS.csprojAssemblyReference.cache
+Notes/Notes.iOS/obj/iPhone/Debug/Notes.iOS.exe
+Notes/Notes.iOS/obj/iPhone/Debug/Notes.iOS.pdb
+Notes/Notes.UWP/obj/x86/Debug/App.xbf
+Notes/Notes.UWP/obj/x86/Debug/intermediatexaml/Notes.UWP.exe
+Notes/Notes.UWP/obj/x86/Debug/intermediatexaml/Notes.UWP.pdb
+Notes/Notes.UWP/obj/x86/Debug/MainPage.xbf
+Notes/Notes.UWP/obj/x86/Debug/Microsoft.UI.Xaml/DensityStyles/Compact.xbf
+Notes/Notes.UWP/obj/x86/Debug/Notes.UWP.csprojAssemblyReference.cache
+Notes/Notes.UWP/obj/x86/Debug/Notes.UWP.exe
+Notes/Notes.UWP/obj/x86/Debug/Notes.UWP.pdb
+Notes/Notes.UWP/obj/x86/Debug/ResourceHandlingTask.state
+Notes/Notes.UWP/obj/x86/Debug/XamlSaveStateFile.xml
+Notes/Notes/bin/Debug/netstandard2.0/Notes.dll
+Notes/Notes/bin/Debug/netstandard2.0/Notes.pdb
+Notes/Notes/bin/Debug/netstandard2.0/ref/Notes.dll
